# nautilusAdapter

./: .envrc  .gitignore  AGENTS.md  README.md  pyproject.toml  run_backtests.py  setup_venv.sh
examples/: batch_test.py  fetch_top_volatile.py
src/: settings.py
src/backtester/: AGENTS.md  __main__.py  batch_test.py  strategy_bullish_engulfing.py  strategy_variants.py
src/backtester/core/: __init__.py  base_strategy.py  benchmark.py  data_loader.py  fees.py  models.py  report_maker.py  runner.py  universe.py
src/backtester/docs/: CAMPAIGN_BLUEPRINT.md  NAUTILUS_DOCS.md  STRATEGY_RESEARCH_2026.md
src/backtester/strategies/: strategy_oversold_bounce.py
src/backtester/strategy_composite/: __init__.py  builder.py  config.py  exits.py  registry.py  signals.py  strategy.py
src/historical_data_fetcher/: __init__.py  config.py  historical_data_provider.py  historical_data_store.py  interfaces.py  storage.py
src/historical_data_fetcher/core/: README.md  __init__.py  interfaces.py  storage.py
src/historical_data_fetcher/providers/upstox/: __init__.py  auth.py  fetcher.py  instrument_store.py
src/provider/: realtime_http_client.py
src/provider/screener/: __init__.py
src/provider/screener/bhavcopy/: __init__.py  client.py  data_fetcher.py
src/provider/screener/nse_data/: __init__.py  client.py
src/provider/upstox/: AGENTS.md  __init__.py  auth.py  client.py  exceptions.py  fetcher.py  instrument_store.py  settings.py
src/utility/: __init__.py  file_storage.py  nautilus_utility.py
